Fixed row gap in the catalogs menu

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ nav {
 
 main {
     display: flex;
-    width: 100%;
+    width: 100vb;
     flex-direction: column;
     align-items: center;
 }
@@ -228,7 +228,8 @@ li {
 }
 .catalog-info {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 60% 20% 20%;
+    column-gap: inherit;
     justify-content: stretch;
     width: 100vh;
 }
@@ -255,7 +256,7 @@ li {
 .catalogs-home-list {
     display: flex;
     flex-direction: row;
-    width: 70%;
+    width: 100vb;
 }
 
 .login-form div ul {
@@ -271,9 +272,9 @@ li {
 }
 
 .date-added {
+    display: flex;
+    justify-content: flex-end;
     font-size: 15px;
-    margin-left: 30px;
-    margin-right: 30px;
     color: #666;
 }
 a.link-like-normal-text {
@@ -289,4 +290,8 @@ textarea {
     color: green;
     padding: 0;
     text-align: right;
+}
+.editor-buttons {
+    display: flex;
+    justify-content: flex-end;
 }
